fix: fix dynamic routing jump bug

--- a/src/static/css/common.scss
+++ b/src/static/css/common.scss
@@ -10,7 +10,6 @@ body {
   width: 100%;
   height: 100%;
   min-width: 1080px;
-  overflow: hidden;
   background-color: #f2f2f2;
 }
 #root {
